--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
             
                 <h2>GRAPHIC DESIGN</h2>
             <div class="portfolio">
-           <a href="helpinghands.html" title="helping hands"><img src="img/portfolio/helpinghands/hh_logo.jpg" alt="helping hands"></a>
+           <a href="helpinghands.html" title="helping hands"><img src="img/portfolio/helpinghands/hh_logo.png" alt="helping hands"></a>
             <a href="" title="moonlight organic farm"><img src="img/portfolio/moonlightfarm-logo.png" alt="moonlight organic farm"></a>
             <a href="" title="smokestack bbq menu"><img src="img/portfolio/menu/menu.jpg" alt="smokestack bbq menu"></a>
             </div>
@@ -38,6 +38,9 @@
             <div class="portfolio">
                 <a href="" title="editorial bike illustration"><img src="img/portfolio/bike.jpg" alt="editorial nike illustration"></a>
                 <a href="" title="warriors icons"><img src="img/portfolio/warriors-icons/warriors-icons-01.png" alt="warriors icons"></a>
+                <a href="" title="warriors icons"><img src="img/portfolio/warriors-icons/warriors-icons-02.png" alt="warriors icons"></a>
+                <a href="" title="warriors icons"><img src="img/portfolio/warriors-icons/warriors-icons-03.png" alt="warriors icons"></a>
+                <a href="" title="warriors icons"><img src="img/portfolio/warriors-icons/warriors-icons-04.png" alt="warriors icons"></a>
             </div>
             
         </main>
