--- a/404.html
+++ b/404.html
@@ -29,11 +29,4 @@
         
     </body>
     
-     <footer>
-         <a href="index.html" title="home"> <img class="smalllogo" src="img/FSE_icon.svg" alt="FSE Designs Logo"></a><br>
-            <a href="about.html"><img class="icon" src="img/icons/moon_fill.svg" alt=”about”>about</a>
-            <a href="portfolio.html"><img class="icon" src="img/icons/saturn_fill.svg" alt=”portfolio”>portfolio</a>
-            <a href="contact.html"><img class="icon" src="img/icons/star_fill.svg" alt=”contact”>contact</a>
-            <br>
-        <p>&copy; Francie Eannarino, 2019</p>
-  </footer>
+</html>
